       _____) )| |___| || |  \ \ | |      | |  \ \ | |   | || || || |
      (______/  \_____/ |_|   |_||_|      |_|   |_||_|   |_| \_____/
                                                               
      Surfraw - Shell Users' Revolutionary Front Rage Against the Web

				 Oh Baybe
				I need some
			       Deep Linking
				 Let us go
			    Surfin' in the raw!

				  N E W S

Sun Feb  1 20:07:05 GMT 2004 - surfraw 2.0.1

Please note that the elvi have moved again, to /usr/lib/surfraw

If you used surfraw-update-path from version 2.0 to add the elvi
directory to your path, you will need to run it again, first with
-remove to remove the old path, then again with -add. To change your
path you will need to either log out and in again or source the
relevant config files.

  * Moved elvi to /usr/lib/surfraw
  * Updated docs for new elvi location
  * Changed man page section for all elvi to 1sr
  * Fixed surfraw help text
  * Added man page links for pgpkeys, ebay and sharereactor
  * Added linda override (and surfraw.dirs) for usr-lib-in-arch-all
  * Added debhelper tokens to prerm/postinst 
    (they were in released 2.0-1 but not CVS)
  * Rewrote man page surfraw.1.in, added man page elvi.1sr.in
    Both go via autoconf.
  * Removed old debian/surfraw.1
  * Updated debian/surfraw.links to point elvi to elvi.1sr.gz
  * Updated AUTHORS to hopefully include every contributor, ever.
  * Changed a few "def"s to "defyn"s in surfraw.conf.in
  * Fixed quoting so   sr google foo "bar baz" qux   works
  * Makefile.am: Added missing files to EXTRA_DIST
  * Added a debconf note (only visible if upgrading from 2.0-1)
    explaining the elvi have moved again
  * configure.in: changed to new AM_INIT_AUTOMAKE format,
    specified minimum automake version 1.7
  * updated surfraw.lsm with new URLs
  * deleted debian/rules.save (old rules backup)
  * Removed elvi:
    + britannica: gone subscription-only
    + swhois: all whois sites I can find have anti-harvester features