@@ -1,5 +1,5 @@
 # $Id$
-SUBDIRS		= elvi debian
+SUBDIRS		= elvi
 
 bin_SCRIPTS	= surfraw surfraw-update-path W
 sysconf_DATA	= surfraw.conf surfraw.bookmarks
@@ -8,7 +8,12 @@ man_MANS = surfraw-update-path.1 surfraw.1 elvi.1sr
 EXTRA_DIST	= surfraw.lsm.in surfraw.IN surfraw-update-path.IN\
                   surfraw.spec.in aclocal.m4 HACKING Makefile.include \
 				  surfraw.1.in elvi.1sr.in W surfraw.bookmarks links.IN \
-		  $(devel_extra)
+				  debian/changelog debian/config debian/control debian/copyright \
+				  debian/docs debian/linda.overrides debian/postinst \
+				  debian/prerm debian/rules debian/surfraw.dirs debian/templates \
+				  debian/po/POTFILES.in debian/po/templates.pot  \
+				  $(devel_extra)
+
 CLEANFILES = surfraw surfraw-update-path surfraw-update-path.1 surfraw.spec surfraw.lsm \
 			surfraw.1 elvi.1sr links
 
