@@ -32,6 +32,6 @@ AC_SUBST(sr_text_browser)
 AC_CHECK_PROGS(sr_graphical_browser, mozilla konqueror netscape opera kfm)
 AC_SUBST(sr_graphical_browser)
 
-AC_CONFIG_FILES([Makefile surfraw.conf surfraw.lsm surfraw.spec elvi/Makefile debian/Makefile surfraw.1 elvi.1sr])
+AC_CONFIG_FILES([Makefile surfraw.conf surfraw.lsm surfraw.spec elvi/Makefile surfraw.1 elvi.1sr])
 AC_OUTPUT
 
