@@ -1,11 +1,0 @@
-# $Id$
-noinst_DATA=templates
-
-CLEANFILES = templates
-
-templates: templates.IN
-
-EXTRA_DIST=changelog config control copyright docs linda.overrides postinst \
-           prerm rules surfraw.dirs templates.IN
-
-include $(top_srcdir)/Makefile.include
