@@ -1,26 +1,0 @@
-Template: surfraw/surfraw-path
-Type: note
-Description: New layout for surfraw elvi
- Surfraw has been rearranged so the elvi (tools to search websites) are in a separate directory (@ELVIDIR@) and no longer in your path. To run an elvis now, use:
- .
- surfraw elviname [options] searchterms
- .
- sr is an alias for surfraw, so you could do, for example:
- .
- sr google -lucky my 200 monkeys
- .
- If you wish to retain the old behaviour of running elvi directly, use surfraw-update-path(1) to append @ELVIDIR@ to your shell's PATH (or optionally, all users and/or all known shells)
-
-Template: surfraw/surfraw-v2-upgrade
-Type: note
-Description: Elvi have moved *again*
- The elvi have moved again to @ELVIDIR@
- .
- If you ran surfaw-update-path when version 2.0-1 was installed, you will
- need to run it again, twice, to update your config files to the new location.
- .
- First run it with -remove, to remove the existing path, then with -add to add
- the new path.
- .
- Remember you will need source your config files (or log out and in again) for this
- to take effect.
