@@ -1,53 +1,53 @@
-@bindir@/surfraw @bindir@/sr
-@mandir@/man1/surfraw.1.gz @mandir@/man1/sr.1.gz
-@mandir@/man1/surfraw.1.gz @mandir@/man1/W.1.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/alioth.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/altavista.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/amazon.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/ask.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/austlii.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/bbcnews.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/cddb.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/cite.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/cnn.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/currency.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/debbugs.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/debcontents.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/deblists.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/debpackages.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/deja.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/ebay.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/excite.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/fast.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/filesearching.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/freebsd.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/freedb.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/freshmeat.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/google.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/happypenguin.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/imdb.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/jake.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/leodict.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/netbsd.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/openbsd.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/pgpkeys.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/pubmed.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/rfc.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/rhyme.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/scaleplus.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/scpan.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/sharereactor.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/slashdot.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/slinuxdoc.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/sourceforge.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/stockquote.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/sundocs.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/sunsolve.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/thesaurus.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/translate.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/webster.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/wetandwild.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/wikipedia.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/woffle.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/xxx.1sr.gz
-@mandir@/man1/elvi.1sr.gz @mandir@/man1/yahoo.1sr.gz
+surfraw @bindir@/sr
+surfraw.1.gz @mandir@/man1/sr.1.gz
+surfraw.1.gz @mandir@/man1/W.1.gz
+elvi.1sr.gz @mandir@/man1/alioth.1sr.gz
+elvi.1sr.gz @mandir@/man1/altavista.1sr.gz
+elvi.1sr.gz @mandir@/man1/amazon.1sr.gz
+elvi.1sr.gz @mandir@/man1/ask.1sr.gz
+elvi.1sr.gz @mandir@/man1/austlii.1sr.gz
+elvi.1sr.gz @mandir@/man1/bbcnews.1sr.gz
+elvi.1sr.gz @mandir@/man1/cddb.1sr.gz
+elvi.1sr.gz @mandir@/man1/cite.1sr.gz
+elvi.1sr.gz @mandir@/man1/cnn.1sr.gz
+elvi.1sr.gz @mandir@/man1/currency.1sr.gz
+elvi.1sr.gz @mandir@/man1/debbugs.1sr.gz
+elvi.1sr.gz @mandir@/man1/debcontents.1sr.gz
+elvi.1sr.gz @mandir@/man1/deblists.1sr.gz
+elvi.1sr.gz @mandir@/man1/debpackages.1sr.gz
+elvi.1sr.gz @mandir@/man1/deja.1sr.gz
+elvi.1sr.gz @mandir@/man1/ebay.1sr.gz
+elvi.1sr.gz @mandir@/man1/excite.1sr.gz
+elvi.1sr.gz @mandir@/man1/fast.1sr.gz
+elvi.1sr.gz @mandir@/man1/filesearching.1sr.gz
+elvi.1sr.gz @mandir@/man1/freebsd.1sr.gz
+elvi.1sr.gz @mandir@/man1/freedb.1sr.gz
+elvi.1sr.gz @mandir@/man1/freshmeat.1sr.gz
+elvi.1sr.gz @mandir@/man1/google.1sr.gz
+elvi.1sr.gz @mandir@/man1/happypenguin.1sr.gz
+elvi.1sr.gz @mandir@/man1/imdb.1sr.gz
+elvi.1sr.gz @mandir@/man1/jake.1sr.gz
+elvi.1sr.gz @mandir@/man1/leodict.1sr.gz
+elvi.1sr.gz @mandir@/man1/netbsd.1sr.gz
+elvi.1sr.gz @mandir@/man1/openbsd.1sr.gz
+elvi.1sr.gz @mandir@/man1/pgpkeys.1sr.gz
+elvi.1sr.gz @mandir@/man1/pubmed.1sr.gz
+elvi.1sr.gz @mandir@/man1/rfc.1sr.gz
+elvi.1sr.gz @mandir@/man1/rhyme.1sr.gz
+elvi.1sr.gz @mandir@/man1/scaleplus.1sr.gz
+elvi.1sr.gz @mandir@/man1/scpan.1sr.gz
+elvi.1sr.gz @mandir@/man1/sharereactor.1sr.gz
+elvi.1sr.gz @mandir@/man1/slashdot.1sr.gz
+elvi.1sr.gz @mandir@/man1/slinuxdoc.1sr.gz
+elvi.1sr.gz @mandir@/man1/sourceforge.1sr.gz
+elvi.1sr.gz @mandir@/man1/stockquote.1sr.gz
+elvi.1sr.gz @mandir@/man1/sundocs.1sr.gz
+elvi.1sr.gz @mandir@/man1/sunsolve.1sr.gz
+elvi.1sr.gz @mandir@/man1/thesaurus.1sr.gz
+elvi.1sr.gz @mandir@/man1/translate.1sr.gz
+elvi.1sr.gz @mandir@/man1/webster.1sr.gz
+elvi.1sr.gz @mandir@/man1/wetandwild.1sr.gz
+elvi.1sr.gz @mandir@/man1/wikipedia.1sr.gz
+elvi.1sr.gz @mandir@/man1/woffle.1sr.gz
+elvi.1sr.gz @mandir@/man1/xxx.1sr.gz
+elvi.1sr.gz @mandir@/man1/yahoo.1sr.gz
