@@ -15,7 +15,7 @@
 
 				  N E W S
 
-Sun Feb  1 20:07:05 GMT 2004 - surfraw 2.0.1
+Tue Feb 10 04:01:40 GMT 2004 - surfraw 2.0.1
 
 Please note that the elvi have moved again, to /usr/lib/surfraw
 
@@ -67,6 +67,11 @@ relevant config files.
   * Added note to HACKING explaining how to disable ifs quoting
   * synced NAMESPACE branch with HEAD
     Please use the main HEAD branch from now on.
+  * links.IN: made links relative
+  * Converted debconf to po-debconf
+  * Eliminated templates.IN, as it confused po-debconf
+  * Deautoconfiscated the debian directory, as only templates went through
+    autoconf
 
 Tue Dec 23 03:19:58 GMT 2003 - surfraw 2.0
 
